--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <aside class="quote"><i>"The best experience of our lives"</i></aside>
       <p>Ariel Quiónes & Gonzalo Manrique, Ironhack Founders</p>
     </header>
-    <section id="general-information">
+    <section id="general-information" class="dark-background">
       <article>
         <h3>Hello!</h3>
         <p class="text">
           Welcome to IronSkydive, the best adventure you will ever have
         </p>
-        <a href="#">Learn More</a>
+        <a href="#" class="link-btn">Learn More</a>
       </article>
       <article>
         <h3>About Us</h3>
@@ -41,20 +41,20 @@
           We like a lot programming websites, but we also love to practice
           sport.
         </p>
-        <a href="#">Watch Video</a>
+        <a href="#" class="link-btn">Watch Video</a>
       </article>
       <article>
         <h3>Wanna join?</h3>
         <p class="text">
           Join our fitness program to be in good shape while learning
         </p>
-        <a href="#">Register</a>
+        <a href="#" class="link-btn">Register</a>
       </article>
     </section>
     <section id="structure">
       <h3>How do we structure the day?</h3>
       <div>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"
             alt="Books"
@@ -65,7 +65,7 @@
             kind of problem.
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
             alt="Profile"
@@ -76,7 +76,7 @@
             All sizes available.
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"
             alt="Plane"
@@ -87,7 +87,7 @@
             fly.
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"
             alt="Parachute"
