--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </table>
       <h3>Schedule a Time Slot</h3>
     </section>
-    <footer id="contact-information">
+    <footer id="contact-information" class="dark-background footer">
       <section>
         <h5>Contact Information</h5>
         <address class="address">
